# hacknroll-26

./: .gitignore  package-lock.json  package.json  replacements.txt
animation/Assets/: MusicNotes.mat  SceneManager.cs  TextParticle.cs  UniversalRenderPipelineGlobalSettings.asset
animation/Assets/Animation/: Animator.controller  CameraAnimator.controller  Computer.anim  Default.anim  Microphone.anim  Narrating.anim  NotScrolling.anim  SFX.anim  SFXAnimator.controller  SFXFadeIn.anim  Scrolling.anim  SpeechBubbleAnimator.controller  (+7 more)
animation/ProjectSettings/: ProjectSettings.asset
backend/: .env.example  .gitignore  README.md  pyproject.toml  temp.py  test.ipynb
backend/app/: main.py
backend/app/api/: routes.py  types.py
backend/app/core/: config.py  models.py  old_prompts.py  pipeline.py  prompts.py  scene_pipeline.py
backend/app/core/editing/: edit_prompt_request.py  select_image_request.py
backend/app/core/generation/: plan.py  visuals.py
backend/app/core/generation/manim/: fix_code.py  generate_code.py  render_code.py  render_loop.py  stitch_scene.py
backend/app/services/: elevenlabs.py  klipy.py  narration_timestamps.py  openrouter.py  pixabay.py  test_narration_timestamps.py  test_trump_voice.py  trump_voice.py
backend/app/utils/: alignment.py  api_client.py  assets.py  download_file.py  gather.py  get_file_path.py  make_callback.py  normalize_volume.py  parallelize.py  template.py
backend/mock/: manim_prompt.txt  scene.py  scene_fixed.py  video_plan.json
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+61 files in other folders)
